--- a/AppWebApi/appsettings.json
+++ b/AppWebApi/appsettings.json
@@ -14,24 +14,6 @@
   },
 
   "AllowedHosts": "*",
-  "DbSetActiveIdx": 0,
+  "DbSetActiveIdx": 5
 
-  //Move below to User secrets
-  "ConnectionStrings": {
-
-    "SQLServer-wapistart-docker-sysadmin": "Data Source=localhost,14333;Initial Catalog=wapistart;Persist Security Info=True;User ID=sa;Pwd=skYhgS@83#aQ;Encrypt=False;"
-  },
-
-  "DbSets": {
-      "DbSet0": {
-          "DbLocation": "wapistart.localhost.docker",
-          "DbServer": "SQLServer",
-          "DbLogins": {
-              "DbLogin0": {
-                  "DbUserLogin": "sysadmin",
-                  "DbConnection": "SQLServer-wapistart-docker-sysadmin"
-              }
-          }
-      }
-  }
 }
