--- a/DbContext/appsettings.json
+++ b/DbContext/appsettings.json
@@ -1,22 +1,3 @@
 {
-  "DbSetActiveIdx": 0,
-
-  //Move below to User secrets
-  "ConnectionStrings": {
-
-    "SQLServer-wapistart-docker-sysadmin": "Data Source=localhost,14333;Initial Catalog=wapistart;Persist Security Info=True;User ID=sa;Pwd=skYhgS@83#aQ;Encrypt=False;"
-  },
-
-  "DbSets": {
-      "DbSet0": {
-          "DbLocation": "wapistart.localhost.docker",
-          "DbServer": "SQLServer",
-          "DbLogins": {
-              "DbLogin0": {
-                  "DbUserLogin": "sysadmin",
-                  "DbConnection": "SQLServer-wapistart-docker-sysadmin"
-              }
-          }
-      }
-  }
+  "DbSetActiveIdx": 5
 }
